--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,60 @@
     transform: rotate(360deg);
   }
 }
+
+video {
+  border: 1px solid black;
+  display: block;
+}
+.videoUpload {
+  margin: auto;
+  margin-top: 30%;
+  text-align: center;
+  width: 27em;
+  height: 10em;
+  display: flex;
+  border: 2px solid black;
+  border-style: dashed;
+  border-radius: 10px;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.custom-file-input {
+  align-items: center;
+  align-self: center;
+  justify-content: center;
+  margin-left: 8em;
+  text-align: center !important;
+  color: transparent;
+}
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  content: "Upload Video File";
+  color: black;
+  display: inline-block;
+  background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  font-size: 10pt;
+}
+.custom-file-input:hover::before {
+  border-color: black;
+}
+.custom-file-input:active {
+  outline: 0;
+}
+.custom-file-input:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
